--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="/sass/main.css" />
-        <title>Les petits plats</title>
+        <title>Les petits plats V2</title>
     </head>
     <body>
         <div id="header" class="text-center px-4 container">
