correction erreur console

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             />
         </div>
 
-        <!-- moteur de recherche -->
+        <!-- Barre de recherche -->
         <div class="container row mx-auto">
             <form class="d-block">
                 <div class="d-flex search-engine-form p-1 rounded">
@@ -60,7 +60,7 @@
                             aria-expanded="false"
                         />
                         <img
-                            class="imgDrop"
+                            class="imgDrop ingredient"
                             src="./assets/img/arrow-down-sign-to-navigate22.png"
                             width="12"
                         />
@@ -80,7 +80,7 @@
                             aria-expanded="false"
                         />
                         <img
-                            class="imgDrop"
+                            class="imgDrop appareil"
                             src="./assets/img/arrow-down-sign-to-navigate22.png"
                             width="12"
                         />
@@ -100,7 +100,7 @@
                             aria-expanded="false"
                         />
                         <img
-                            class="imgDrop"
+                            class="imgDrop ustensils"
                             src="./assets/img/arrow-down-sign-to-navigate22.png"
                             width="12"
                         />
@@ -115,8 +115,8 @@
             </form>
         </div>
 
-        <!-- articles -->
         <div id="articles" class="articles container d-flex row mx-auto"></div>
+
         <script src="/script/variables/variables.js"></script>
         <script src="/script/fetch.js"></script>
         <script src="/script/display/displayResult.js"></script>
