--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
                             fill="#000"
                             class="bi bi-search"
                             viewBox="0 0 16 16"
-                            alt="search"
                         >
                             <path
                                 d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"
@@ -64,16 +63,15 @@
                             placeholder="Ingredients"
                             id="dropdownMenuButton1"
                             data-bs-toggle="dropdown"
-                            aria-expanded="false"
                         />
                         <img
                             class="img-drop ingredient"
                             src="./assets/img/arrow-down-sign-to-navigate22.png"
                             width="12"
+                            alt="arrow down"
                         />
                         <ul
                             class="dropdown-menu"
-                            aria-labelledby="dropdownMenuButton1"
                         ></ul>
                     </div>
                     <div class="dropdown appareil me-2">
@@ -82,7 +80,7 @@
                             class="form-button green dropdown-toggle py-3 mb-2"
                             type="search"
                             placeholder="Appareils"
-                            id="dropdownMenuButton1"
+                            id="dropdownMenuButton2"
                             data-bs-toggle="dropdown"
                             aria-label="search-appareil"
                         />
@@ -90,10 +88,10 @@
                             class="img-drop appareil"
                             src="./assets/img/arrow-down-sign-to-navigate22.png"
                             width="12"
+                            alt="arrow down"
                         />
                         <ul
                             class="dropdown-menu"
-                            aria-labelledby="dropdownMenuButton1"
                         ></ul>
                     </div>
                     <div class="dropdown ustensils me-2">
@@ -102,7 +100,7 @@
                             class="form-button tangerine dropdown-toggle py-3 mb-2"
                             type="search"
                             placeholder="Ustensils"
-                            id="dropdownMenuButton1"
+                            id="dropdownMenuButton3"
                             data-bs-toggle="dropdown"
                             aria-label="search-ustensils"
                         />
@@ -110,10 +108,10 @@
                             class="img-drop ustensils"
                             src="./assets/img/arrow-down-sign-to-navigate22.png"
                             width="12"
+                            alt="arrow down"
                         />
                         <ul
                             class="dropdown-menu"
-                            aria-labelledby="dropdownMenuButton1"
                         ></ul>
                     </div>
                 </div>
