--- a/index.html
+++ b/index.html
@@ -120,11 +120,11 @@
             class="articles container-lg d-flex row mx-auto"
         ></main>
 
-        <script src="/script/variables/variables.js"></script>
-        <script src="/script/fetch.js"></script>
-        <script src="/script/display/displayResult.js"></script>
-        <script src="/script/display/displayFilter.js"></script>
-        <script src="/script/filter/filter.js"></script>
-        <script src="/script/script.js"></script>
+        <script src="./script/variables/variables.js"></script>
+        <script src="./script/fetch.js"></script>
+        <script src="./script/display/displayResult.js"></script>
+        <script src="./script/display/displayFilter.js"></script>
+        <script src="./script/filter/filter.js"></script>
+        <script src="./script/script.js"></script>
     </body>
 </html>
