--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                         id="search-engine"
                         class="search form-control me-2 p-3"
                         type="search"
+                        minlength="3"
                         placeholder="Rechercher un ingrédient, appareil, ustensiles ou une recette"
                         aria-label="Search"
                         value=""
