--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <title>Les petits plats</title>
     </head>
     <body>
-        <header id="header" class="text-center px-4 container">
+        <header id="header" class="text-center px-4 container-lg">
             <img
                 src="./assets/img/logo_edited-250.png"
                 alt="logo les petis plats"
@@ -18,7 +18,7 @@
         </header>
 
         <!-- Barre de recherche -->
-        <div class="container row mx-auto">
+        <div class="container-lg row mx-auto">
             <form class="d-block">
                 <div class="d-flex search-engine-form p-1 rounded">
                     <input
@@ -70,7 +70,7 @@
                             width="12"
                             alt="arrow down"
                         />
-                        <ul class="dropdown-menu"></ul>
+                        <ul class="dropdown-menu top-list-ingredients"></ul>
                     </div>
                     <div class="dropdown appareil me-2">
                         <input
